feat: wraps endpoints to metrics adapter
